# beautiful-simple-drf-apps-presentation

./: .gitignore  README.md  index.html  package-lock.json  package.json  talk_draft
demo/: README.md  pyproject.toml  requirements.txt
demo/customers/: serializers.py  views.py
demo/demo/: settings.py  urls.py
js/: reveal.min.js
src/: index.html
